--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Gráfico dos Jogos Mais Jogados no Mundo</h1>
+        <h1>Gráfico Clinica Veterinária</h1>
         <nav>
             <a href="https://kiry5.github.io/gustavo.github.io/">Inicio</a>
             <a href="#">Minha Região</a>
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gustavo Shinozaki de Freitas</p>
+        <p>Desenvolvido por Ana Luiza</p>
     </footer>
     <script src="script.js"></script>
 </body>
