--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="graficos-container"
         class="graficos-container">
         <p class="graficos-container_texto">
-            Você sabia que os jogos mais populares, como <strong class="spant">Fortnite</strong>, <strong class="spant">Minecraft</strong> e <strong class="spant">League of Legends</strong>, têm milhões de jogadores diários em todo o mundo? Veja como as preferências se distribuem em nossa análise.
+            saiba quantos animais vem se consutar na <strong>nossa clínica</strong>.
             </p>
         </section>
     </main>
